--- a/frontend/routes/SiteMapPage/views/PermissionRow.scss
+++ b/frontend/routes/SiteMapPage/views/PermissionRow.scss
@@ -1,9 +1,8 @@
 $state-info-bg: #d9edf7;
 
 .PermissionRow {
-  background-color: #fff;
   &:hover {
-    background-color: #f5f5f5;
+    background-color: rgba(0,0,0, .1);
   }
 
   &__container {
